--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pw-frontend",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"cd backend && npm start\"",
     "build": "vite build"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "vite": "^1.0.0-rc.13",
-    "@vue/compiler-sfc": "^3.0.4"
+    "@vue/compiler-sfc": "^3.0.4",
+    "concurrently": "^5.3.0"
   }
 }
