--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@msgpack/msgpack": "^2.4.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "child_process": "^1.0.2",
     "express": "^4.17.1",
     "ws": "^7.4.3"
   }
